# seq_io_parallel_index

./: Cargo.toml  README.md
examples/: expensive_calculation.rs  expensive_calculation_paired.rs  tracking_index.rs
src/: error.rs  fasta.rs  fastq.rs  lib.rs  macro_impl.rs  macro_paired_impl.rs  processor.rs  reader.rs  record.rs
